# Tri-dexel

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run.bat  setup.bat
.claude/: settings.local.json
examples/: demo_animated.py  demo_gcode.py  demo_pocket.py  sample.nc
src/gcode/: __init__.py  canonical.py  parser.py  siemens_sinumerik.py
src/motion/: __init__.py  gcode.py  pose.py
src/reconstruction/: __init__.py  mesh.py  occ_step_export.py
src/simulation/: __init__.py  collision.py  engine.py  sv_engine.py
src/stock/: __init__.py  dexel_ray.py  numpy_grid.py  stl_importer.py  surface_metadata.py  tri_dexel.py  z_dexel_grid.py
src/swept_volume/: __init__.py  builder.py  envelope.py  sampler.py  triangle.py
src/tool/: __init__.py  tool_geometry.py
src/visualization/: __init__.py  animator.py  renderer.py
tests/: test_collision_detection.py  test_dexel_ray.py  test_gcode_canonical.py  test_motion_pose.py  test_occ_step_export.py  test_reconstruction_mesh.py  test_simulation.py  test_surface_metadata.py  test_swept_envelope.py  test_tool_functional_zones.py  test_tool_geometry.py  test_vwp_lite.py  test_z_dexel_grid.py
tools/: freecad_mesh_to_step.py
